overflow getting fixed

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,3 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
-#home-bg{
-    background-image: url(file:///C:/Users/User/Pictures/zuri%20cdt%20img-3.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
